# stringdriver

./: .env  .gitignore  .gitmodules  ANTI_HAMMERING_RULE.md  CHAT_SUMMARY.md  Cargo.toml  MACHINE_STATE_LOGGING.md  NEXT_STEPS.md  README.md  STRING_NUM_VS_CHANNELS_ISSUES.md  build.rs  create_tables.sql  kill_all.sh  master_gui.sh  setup_git.sh  string_driver.yaml  surfer.py
Reference ONLY/: DATABASE_SCHEMA.md  STRING_NUM_ANALYSIS.md  VISION.md
Reference ONLY/String_Driver/: String_Driver.ino
Reference ONLY/String_Driver/ArduinoISP/: String_Driver.ino.mega.hex
Reference ONLY/String_Driver/String_Driver2/: String_Driver2.ino  Tuner_Driver.ino
Reference ONLY/String_Driver/String_Driver3/: String_Driver3.ino
Reference ONLY/String_Driver/Tuner_Driver_Pico/: Tuner_Driver_Pico.ino
Reference ONLY/Tuner_Driver/Tuner_Driver/: Tuner_Driver.ino
examples/: ard_rust.rs  gpio_test.rs
src/: arduino_connection.rs  config_loader.rs  crosstalk.rs  get_results.rs  gpio.rs  gstreamer.rs  lib.rs  machine_state_logger.rs  operations.rs  pitch_analysis.rs
src/gui/: launcher.rs  master_gui.rs  operations_gui.rs  stepper_gui.rs
