[package]
name = "stringdriver"
version = "0.1.0"
edition = "2021"

[dependencies]
realfft = "3.3.0"
rustfft = "6.0"
egui = "0.27"
eframe = "0.27"
chrono = "0.4"
num-traits = "0.2"
anyhow = "1.0.70"
log = "0.4"
env_logger = "0.11"
nom = "7.1.3"
memchr = "2.5.0"
rfd = "0.14"
winapi = { version = "0.3.9", features = ["windef", "winuser"] }
portaudio = "0.8"
ctrlc = "3.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
pitch-detector = "0.3.1"
rayon = "1.8"
shared_memory = "0.12"
bincode = "2.0.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ringbuf = "0.4"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
fern = "0.7"
hound = "3.5"
memmap2 = "0.9"
clap = { version = "4.4", features = ["derive"] }
serde_yaml = "0.9.34"
egui_plot = "0.27"
signal-hook = "0.3"
libc = "0.2"
gethostname = "0.2"
ndarray = "0.15"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-uuid-1"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
serialport = { version = "4.3", default-features = false, features = ["libudev"] }
gpiocdev = { version = "0.7", optional = true }

[features]
default = []
gpiod = ["gpiocdev"]

# GUI Applications
[[bin]]
name = "stepper_gui"
path = "src/gui/stepper_gui.rs"

[[bin]]
name = "operations_gui"
path = "src/gui/operations_gui.rs"

[[bin]]
name = "launcher"
path = "src/gui/launcher.rs"

